--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==4.3.0
 attrs==23.2.0
 blinker==1.7.0
 certifi==2024.2.2
@@ -7,9 +8,18 @@ colorama==0.4.6
 coloredlogs==15.0.1
 contourpy==1.2.0
 cycler==0.12.1
+exceptiongroup==1.2.0
+filelock==3.13.1
 Flask==3.0.2
 flatbuffers==24.3.7
 fonttools==4.50.0
+fsspec==2024.3.1
+gradio_client==0.13.0
+gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.4
+httpx==0.27.0
+huggingface-hub==0.21.4
 humanfriendly==10.0
 idna==3.6
 imageio==2.34.0
@@ -26,7 +36,7 @@ mpmath==1.3.0
 networkx==3.2.1
 numba==0.59.1
 numpy==1.26.4
-onnxruntime==1.16.3
+onnxruntime==1.17.1
 opencv-python-headless==4.9.0.80
 packaging==24.0
 pillow==10.2.0
@@ -37,6 +47,7 @@ PyMatting==1.1.12
 pyparsing==3.1.2
 pyreadline3==3.4.1
 python-dateutil==2.9.0.post0
+PyYAML==6.0.1
 referencing==0.34.0
 rembg==2.0.56
 requests==2.31.0
@@ -44,9 +55,11 @@ rpds-py==0.18.0
 scikit-image==0.22.0
 scipy==1.12.0
 six==1.16.0
+sniffio==1.3.1
 sympy==1.12
 tifffile==2024.2.12
 tqdm==4.66.2
+typing_extensions==4.10.0
 urllib3==2.2.1
+websockets==11.0.3
 Werkzeug==3.0.1
-gunicorn==19.7.1
