--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/templates/index.html" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/app.py" }]
 }
